--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Ismile Hossain",
   "license": "ISC",
